# Sepia-filter

./: CMakeLists.txt  README.md
include/: bmp.h  image.h  sepia.h
src/: bmp.c  image.c  main.c  sepia.asm  sepia.c
